--- a/behavioral/pom.xml
+++ b/behavioral/pom.xml
@@ -3,17 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.example</groupId>
+        <artifactId>DesignPatterns</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>org.example</groupId>
-    <artifactId>DesignPatterns</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>creational</module>
-        <module>creational</module>
-        <module>behavioral</module>
-        <module>structural</module>
-    </modules>
+    <groupId>net.ilyass</groupId>
+    <artifactId>behavioral</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
