--- a/creational/pom.xml
+++ b/creational/pom.xml
@@ -3,16 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.example</groupId>
+        <artifactId>DesignPatterns</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>org.example</groupId>
-    <artifactId>DesignPatterns</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>net.ilyass</groupId>
+    <artifactId>creational</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>creational</module>
-        <module>creational</module>
-        <module>behavioral</module>
-        <module>structural</module>
+        <module>SingletonBuilderPrototype</module>
     </modules>
 
     <properties>
