--- a/structural/flyweight/pom.xml
+++ b/structural/flyweight/pom.xml
@@ -4,23 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.example</groupId>
-        <artifactId>DesignPatterns</artifactId>
+        <groupId>net.ilyass</groupId>
+        <artifactId>structural</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>net.ilyass</groupId>
-    <artifactId>structural</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>adapter</module>
-        <module>bridge</module>
-        <module>composite</module>
-        <module>decorator</module>
-        <module>facade</module>
-        <module>proxy</module>
-        <module>flyweight</module>
-    </modules>
+    <artifactId>flyweight</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
